changed z-index to fix carousel

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -3,7 +3,7 @@ nav.navbar {
   position: fixed;
   width: 100%;
   top: 0;
-  z-index: 1000;
+  z-index: 1001;
   transition: var(--transition);
 }
 
